--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,13 +18,13 @@ jobs:
             tags=$repo:unstable
           elif [[ $ref =~ ^([0-9.]+)-((([0-9]+[.])[0-9]+[.])([.][0-9+])*)  ]]; then
             upstream=${BASH_REMATCH[1]}
-            minor=${BASH_REMATCH[3]}.x
-            major=${BASH_REMATCH[4]}.x
+            minor=${BASH_REMATCH[3]}x
+            major=${BASH_REMATCH[4]}x
             tags=$repo:latest,$repo:$ref,$repo:$upstream-$minor,$repo:$upstream-$major,$repo:upstream
           else
             echo "Bad tag: $ref"
             exit 1
           fi
           echo "$tags"
-          echo "::set-env name=build_tags::$tags"
+          echo "build_tags=$tags" >> $GITHUB_ENV
           exit 1
