--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,17 +22,18 @@ jobs:
           images: ${{ github.repository }}
           tags: 'type=semver,pattern={{major}}.{{minor}},value=${{ matrix.php }}'
           flavor: 'latest=false'
+
       - name: Calculate Tags
         id: meta
         uses: docker/metadata-action@v3
         with:
           images: ${{ github.repository }}
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}.x
-            type=raw,value=unstable
+            type=semver,pattern={{version}},value=2.1.1
+            type=semver,pattern={{major}}.{{minor}},value=2.1.1
+            type=semver,pattern={{major}}.x,value=2.1.1
+            type=raw,value=
           flavor: |
-            latest=auto
-            prefix=${{ matrix.php }}-,onlatest=true
-            prefix=${{ steps.phpver.outputs.version }}-,onlatest=true
+            latest=false
+            prefix=${{ matrix.php }}
+            prefix=${{ steps.phpver.outputs.version }}
