--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,12 +28,13 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: ${{ github.repository }}
+          flavor: 'latest=false'
           tags: |
-            type=semver,pattern=-{{version}},value=2.1.1
-            type=semver,pattern=-{{major}}.{{minor}},value=2.1.1
-            type=semver,pattern=-{{major}}.x,value=2.1.1
-            type=raw,value=
-          flavor: |
-            latest=false
-            prefix=${{ matrix.php }}
-            prefix=${{ steps.phpver.outputs.version }}
+            type=semver,pattern=${{ matrix.php }}-{{version}},version=2.1.3
+            type=semver,pattern=${{ matrix.php }}-{{major}}.{{minor}}.x,version=2.1.3
+            type=semver,pattern=${{ matrix.php }}-{{major}}.x,version=2.1.3
+            type=raw,value=${{ matrix.php }}
+            type=semver,pattern=${{ steps.phpver.outputs.version }}-{{version}},version=2.15.3
+            type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.{{minor}}.x,version=2.15.3
+            type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.x,version=2.15.3
+            type=raw,value=${{ steps.phpver.outputs.version }}
