--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,8 @@ jobs:
             type=semver,pattern=${{ matrix.php }}-{{version}},version=2.1.3
             type=semver,pattern=${{ matrix.php }}-{{major}}.{{minor}}.x,version=2.1.3
             type=semver,pattern=${{ matrix.php }}-{{major}}.x,version=2.1.3
-            type=raw,value=${{ matrix.php }}
+            type=raw,value=${{ matrix.php }},priority=900
             type=semver,pattern=${{ steps.phpver.outputs.version }}-{{version}},version=2.15.3
             type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.{{minor}}.x,version=2.15.3
             type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.x,version=2.15.3
-            type=raw,value=${{ steps.phpver.outputs.version }}
+            type=raw,value=${{ steps.phpver.outputs.version }},priority=900
