--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,9 @@ jobs:
           images: ${{ github.repository }}
           flavor: 'latest=false'
           tags: |
-            type=semver,pattern=${{ matrix.php }}-{{version}},version=2.1.3
-            type=semver,pattern=${{ matrix.php }}-{{major}}.{{minor}}.x,version=2.1.3
-            type=semver,pattern=${{ matrix.php }}-{{major}}.x,version=2.1.3
+            type=semver,pattern={{version}},prefix=${{ matrix.php }}-,version=2.1.3
+            type=semver,pattern={{major}}.{{minor}}.x,prefix=${{ matrix.php }}-,version=2.1.3
+            type=semver,pattern={{major}}.x,prefix=${{ matrix.php }}-,version=2.1.3
             type=raw,value=${{ matrix.php }},priority=900
             type=semver,pattern=${{ steps.phpver.outputs.version }}-{{version}},version=2.15.3
             type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.{{minor}}.x,version=2.15.3
