--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,11 +30,11 @@ jobs:
           images: ${{ github.repository }}
           flavor: 'latest=false'
           tags: |
-            type=semver,pattern={{version}},prefix=${{ matrix.php }}-,version=2.1.3
-            type=semver,pattern={{major}}.{{minor}}.x,prefix=${{ matrix.php }}-,version=2.1.3
-            type=semver,pattern={{major}}.x,prefix=${{ matrix.php }}-,version=2.1.3
+            type=semver,pattern={{version}},prefix=${{ matrix.php }}-,value=2.1.3
+            type=semver,pattern={{major}}.{{minor}}.x,prefix=${{ matrix.php }}-,value=2.1.3
+            type=semver,pattern={{major}}.x,prefix=${{ matrix.php }}-,value=2.1.3
             type=raw,value=${{ matrix.php }},priority=900
-            type=semver,pattern=${{ steps.phpver.outputs.version }}-{{version}},version=2.15.3
-            type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.{{minor}}.x,version=2.15.3
-            type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.x,version=2.15.3
+            type=semver,pattern=${{ steps.phpver.outputs.version }}-{{version}},value=2.15.3
+            type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.{{minor}}.x,value=2.15.3
+            type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.x,value=2.15.3
             type=raw,value=${{ steps.phpver.outputs.version }},priority=900
