--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,8 @@ jobs:
             type=semver,pattern={{version}},prefix=${{ matrix.php }}-,value=2.1.3
             type=semver,pattern={{major}}.{{minor}}.x,prefix=${{ matrix.php }}-,value=2.1.3
             type=semver,pattern={{major}}.x,prefix=${{ matrix.php }}-,value=2.1.3
-            type=raw,value=${{ matrix.php }},priority=900
+            type=raw,value=${{ matrix.php }}
             type=semver,pattern=${{ steps.phpver.outputs.version }}-{{version}},value=2.15.3
             type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.{{minor}}.x,value=2.15.3
             type=semver,pattern=${{ steps.phpver.outputs.version }}-{{major}}.x,value=2.15.3
-            type=raw,value=${{ steps.phpver.outputs.version }},priority=900
+            type=raw,value=${{ steps.phpver.outputs.version }}
