--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: ${{ github.repository }}
+          images: ${{ github.repository }},ghcr.io/${{ github.repository }}
           flavor: 'latest=false'
           tags: |
             type=semver,pattern={{version}},prefix=${{ matrix.php }}-,value=2.1.3
